* Quit with fatal error if module versions do not match executable version.
  Closes #370 (gscan2pdf opens to white screen).
* Take undo/redo snapshot when adding or correcting OCR text
* Don't lose OCR output when running user-defined tool
* Only update list of user-defined tools on pressing apply in preferences.
* + vertically split screen view for image and OCR output.
* Update to Hungarian translation (thanks to csola)


2.10.2 (17.12.2020):

* Catch errors running default launcher
* Check both stderr and stdout for libtiff-tools version
  Closes Debian bug 977532 (gscan2pdf: save option not available)
* Rename drag tool -> pan tool
* Update to German translation (thanks to Matthias Sprau)
* Update to Turkish translation (thanks to Buckethead)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.10.1 (03.12.2020):

* Switch from Perlmagick to imagemagick for threshold tool to improve
  performance. Closes Debian bug 968918 (Threshold function is extremely slow)
* + missing crop icon
* + View/Edit OCR toggle
* Don't zoom in/out if plus/minus pressed whilst editing OCR
* Allow cut/copy/paste whilst editing OCR
* Fixed bug manually adding OCR that overlaps with existing words
* + button to duplicate OCR text
* Fixed bug adding OCR text '0'
* Fixed bug processing deleted page
* Don't sort OCR confidence list if not changed
* Fixed bug decoding 3-octal UTF-8 characters in DjVu text layer
* Update to Hungarian translation (thanks to csola)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.10.0 (31.10.2020):

* Switch from PDF::API2 to PDF::Builder to improve TIFF handling and compression
  options.
  Closes Debian bugs 602486 (heavily distored scans) and
  703768 (parts of the page translated to the right, black border)
* Switch from internal image viewer to Gtk3::ImageView
  (based on internal image viewer)
* Update to German translation (thanks to Eugen Artus)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)

